--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-emoji": "^0.5.0",
-    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-scroll-to-bottom": "^1.3.2",
     "socket.io-client": "^2.3.0"
